@@ -6880,3 +6880,5 @@ v0.92.0.11:
   - Cache builds & fix up labeler & update to Java 17, courtesy of Warriorrrr with PR #5394.
   - Cleanup util classes, couresty of EuGNosii with PR #5348.
   - Bump language file to 0.130.
+  - Fix PlayerCacheUtil not choosing an Outsider TownBlockStatus.
+    - Closes #5395.
